--- a/src/App.css
+++ b/src/App.css
@@ -44,9 +44,13 @@
   border-radius: 5px;
   border: 1px solid black;
 }
+.form_container{
+  border-radius: 15px;
+  background-color: #dfdfdf;
+  width: 30vw;
+}
 
-
-@media only screen and (max-width: 750px) {
+@media only screen and (max-width: 950px) {
   .footer_container{
     display: flex;
     flex-direction: column;
@@ -57,6 +61,28 @@
   
     background-color: black;
     color: rgb(212, 212, 212);
+  }
+  .form_container{
+    /* border-radius: 15px;
+    background-color: #dfdfdf; */
+    width: 70vw;
+  }
+  .right{
+    width: 50%;
+  }
+}
+
+@media only screen and (max-width: 550px) {
+  
+  .form_container{
+    width: 90vw;
+  }
+  .order_details{
+    display: flex;
+    flex-direction: column!important;
+  }
+  .right{
+    width: 100%;
   }
 }
 
@@ -113,6 +139,7 @@
     padding: 0 40px;
     margin-bottom: 5px;
   }
+ 
 }
 
 .cart{
@@ -154,11 +181,6 @@
 
 .signup{
   height: 80vh;
-}
-.form_container{
-  border-radius: 15px;
-  background-color: #dfdfdf;
-  width: 30vw;
 }
 .form_container form{
   width: 20rem;
